--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="titulo">
         <h1>BARRACAS FOOD </h1> 
         <h2>Tienda de pastas artesanales </h2>   
-        <a class="btn btn-warning" href="./pages/tienda.html" role="button">COMPRAR</a>
+        <a class="btn btn-danger" href="./pages/tienda.html" role="button">IR A LA TIENDA</a>
     </section>
     <section class="produ">
         <h2>Productos Destacados</h2>
@@ -65,15 +65,15 @@
                     <a href="./pages/tienda.html" class="btn btn-danger">Comprar</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 16rem;">
                 <img src="./img/ñoquipanceta.jpg" class="card-img-top" alt="producto">
                 <div class="card-body">
                     <h5 class="card-title">Ñoquis</h5>
-                    <p class="card-text">Ñoquis de papa caseros rellenos de queso</p>
+                    <p class="card-text">Ñoquis de papa caseros rellenos de queso muzzarella.</p>
                     <a href="#" class="btn btn-danger">Comprar</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 16rem;">
                 <img src="./img/capeletinis.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Capeletinis</h5>
@@ -81,7 +81,7 @@
                     <a href="#" class="btn btn-danger">Comprar</a>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 16rem;">
                 <img src="./img/sorrenrojo.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Sorrentinos</h5>
@@ -124,7 +124,8 @@
 
     </main>
     <div class="fixed">
-        <img src="./img/whatsapp.png" width="70px" alt="logo wpp">
+        <a href="https://web.whatsapp.com" target="_blank"><img src="./img/whatsapp.png" width="50" alt="logo wpp"></a>
+        
     </div>
     <footer>
         <div class="footer__logo">
