--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,9 +8,11 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
-    <meta name="description" content="Barracas food suscribite a nuestra pagina para obtenes novedades sobre nuevas resetas.">
-    <meta name="keywords" content=" contacto, barracas, suscribite, correo, contraseña, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso">
-    <title>BarracasFood Panes Suscribite y recibi novedades.</title>
+    <meta name="description"
+        content="Barracas food suscribite a nuestra pagina para obtenes novedades sobre nuevas resetas.">
+    <meta name="keywords"
+        content=" contacto, barracas, suscribite, correo, contraseña, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso">
+    <title>BarracasFood Suscribite y recibi novedades.</title>
 </head>
 
 <body>
@@ -54,36 +56,31 @@
         <main class="contacto">
             <section class="contacto__formulario">
                 <h1>Registrate en Barracas Food</h2>
-                <form action="/procesar_registro" method="post">
-                    <label for="nombre_completo">Nombre completo:</label>
-                    <input type="text" id="nombre_completo" name="nombre_completo" required><br>
+                    <form action="/procesar_registro" method="post">
+                        <label for="nombre_completo">Nombre completo:</label>
+                        <input type="text" id="nombre_completo" name="nombre_completo" required><br>
 
-                    <label for="correo_electronico">Correo electrónico:</label>
-                    <input type="email" id="correo_electronico" name="correo_electronico" required><br>
+                        <label for="correo_electronico">Correo electrónico:</label>
+                        <input type="email" id="correo_electronico" name="correo_electronico" required><br>
 
-                    <label for="contrasena">Contraseña:</label>
-                    <input type="password" id="contrasena" name="contrasena" required><br>
+                        <label for="contrasena">Contraseña:</label>
+                        <input type="password" id="contrasena" name="contrasena" required><br>
 
-                    <input type="checkbox" id="aceptar_terminos" name="aceptar_terminos" required>
-                    <label for="aceptar_terminos">Acepto los términos y condiciones</label><br>
+                        <input type="checkbox" id="aceptar_terminos" name="aceptar_terminos" required>
+                        <label for="aceptar_terminos">Acepto los términos y condiciones</label><br>
 
-                    <input type="submit" value="Registrarse" class="boton">
-                </form>
-            </section>
-            <section class="galeria">
-                <div>
-                    <img src="../img/alamos.jpg" alt="pasta">
-                </div>
-                <div class="galeria__logo">
-                    <img src="../img/logo.jpg" alt="">
-                </div>
-                <div>
-                    <img src="../img/focachafondo.jpg" alt="">
-                </div>
-            </section>
-            <section class="slider-contacto">
+                        <input type="submit" value="Registrarse" class="boton">
+                    </form>
+                    <section class="contenedor">
 
-            </section>
+                        <div class="imagen">
+                            <img src="../img/117388041_191897372384897_8127331102174080284_n.jpg" alt="raviol">
+                            <img src="../img/118975883_2907031072734945_4291665747295615790_n.jpg" alt="pasta">
+                            <img src="../img/121619939_975278702952808_6209944768085587270_n.jpg" alt="pasta">
+                            <img src="../img/varios.jpg" alt="pasta">
+                        </div>
+                    </section>
+                        
         </main>
     </body>
     <footer>
