--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -42,7 +42,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-light" type="submit">Buscar</button>
+                            <button class="btn btn-outline-danger" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -52,13 +52,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/imagenfondo3.jpeg" class="d-block w-100" alt="...">
+                    <img src="../img/fondocarrousel.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/canelotiscarrousel.png" class="d-block w-100" alt="...">
+                    <img src="../img/fondocarrousel2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/imagenfondo3.jpeg" class="d-block w-100"  alt="...">
+                    <img src="../img/fondocarrousel3.jpg" class="d-block w-100"  alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -81,7 +81,7 @@
                     Luego de la pandemia, al ser un grupo de hermanos que se dedico siempre a la gastronomia, nos decidimos por crear un emprendimiento de pastas frescas para tener en el freezer.
                 </p>
             </div>
-            <img src="../img/pastanosotros.jpg" alt="pasta">
+            <img src="../img/raviolito.jpg" alt="pasta">
             </section>
             <section class="nosotros-2">
                 <div>
@@ -92,7 +92,7 @@
                         Somos dos hermanos, Lucila y Maximo Gonzalez, oriundos del barrio de Barracas (CABA) y luego de una vida dededicada a la gastronomia en general, decidimos comenzar con este proyecto luego de la conocida pandemia que irrumpio en el mundo.
                     </p>
                 </div>
-                <img src="../img/pastanosotros2.jpg" alt="">
+                <img src="../img/sorrenvarios.jpg" alt="">
             </section>
             <section class="trabaja-nosotros">
                 <h2>
