--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -45,7 +45,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-danger" type="submit">Buscar</button>
+                            <button class="btn btn-danger" type="submit">Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/sorrenrosa.jpg" class="card-img-top" alt="raviol">
+                    <img src="../img/sorrenrosa.jpg" class="card-img-top" alt="sorrentino">
                     <div class="card-body">
                       <h5 class="card-title">Sorrentinos</h5>
                       <p class="card-text">Rellenos de Calabaza y Muzzarella. 12 unidades</p>
@@ -77,7 +77,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/sorrentienda.jpg" class="card-img-top" alt="...">
+                    <img src="../img/sorrentienda.jpg" class="card-img-top" alt="sorrentino">
                     <div class="card-body">
                       <h5 class="card-title">Sorrentino</h5>
                       <p class="card-text">Relleno de Jamon cocido y Muzarella. 12 unidades</p>
@@ -85,7 +85,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/sorrentinoazul.jpg" class="card-img-top" alt="...">
+                    <img src="../img/sorrentinoazul.jpg" class="card-img-top" alt="sorrentino">
                     <div class="card-body">
                       <h5 class="card-title">Sorrentino</h5>
                       <p class="card-text">Relleno de Roquefort y nuez. 12 unidades</p>
@@ -107,7 +107,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/raviolito.jpg" class="card-img-top" alt="...">
+                    <img src="../img/raviolito.jpg" class="card-img-top" alt="raviol">
                     <div class="card-body">
                       <h5 class="card-title">Ravioles</h5>
                       <p class="card-text">Rellenos de Cuatro quesos. 12 unidades</p>
@@ -115,7 +115,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/raviolbondiola.jpg" class="card-img-top" alt="raviltienda">
+                    <img src="../img/ravioles.jpg" class="card-img-top" alt="raviltienda">
                     <div class="card-body">
                       <h5 class="card-title">Ravioles</h5>
                       <p class="card-text">Rellenos de bondiola braseada . 12 unidades</p>
@@ -157,7 +157,7 @@
                       <a href="#" class="btn btn-danger">1200$</a>
                     </div>
                   </div>
-                  <div class="card" style="width: 300px; height: 400px;">
+                  <div class="card" style="width: 18rem;">
                     <img src="../img/ñoquicala.jpg" class="card-img-top" alt="ñoqui">
                     <div class="card-body">
                       <h5 class="card-title">Ñoquis</h5>
