--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <header>
-        <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+        <div class="barranav">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" class="logo-nav" alt=""></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" class="logo-nav" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
+                            <li class="nav-item primerli">
                                 <a class="nav-link" aria-current="page" href="./pages/tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="card" style="width: 16rem;">
-                <img src="./img/capeletinis.jpg" class="card-img-top" alt="...">
+                <img src="./img/capeletinis(2).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Capeletinis</h5>
                     <p class="card-text">Capeletinis rellenos de roaf beef desmechado y queso muzzarella</p>
@@ -108,10 +108,10 @@
             </div>
             <div class="grid-item tercer-item">
                 
-                <img src="./img/canelotis.jpg" alt="">
+                <img src="./img/canelotiss.jpg" alt="">
             </div>
             <div class="grid-item cuarto-item">
-                <img src="./img/capeletinis.jpg" alt="">
+                <img src="./img/capeletinis(2).jpg" alt="">
                 
             </div>
             <div class="grid-item quinto-item">
