--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -51,7 +51,6 @@
                 </div>
             </nav>
     </header>
-
     <body>
         <main class="contacto">
             <section class="contacto__formulario">
@@ -72,15 +71,13 @@
                         <input type="submit" value="Registrarse" class="boton">
                     </form>
                     <section class="contenedor">
-
                         <div class="imagen">
-                            <img src="../img/117388041_191897372384897_8127331102174080284_n.jpg" alt="raviol">
-                            <img src="../img/118975883_2907031072734945_4291665747295615790_n.jpg" alt="pasta">
-                            <img src="../img/121619939_975278702952808_6209944768085587270_n.jpg" alt="pasta">
+                            <img src="../img/raviolcrudos.jpg" alt="raviol">
+                            <img src="../img/raviolcrudo2.jpg" alt="pasta">
+                            <img src="../img/salmonottis.jpg" alt="pasta">
                             <img src="../img/varios.jpg" alt="pasta">
                         </div>
-                    </section>
-                        
+                    </section>         
         </main>
     </body>
     <footer>
