--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
