--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,11 +14,10 @@
     <meta name="keywords" content=" pan, panes, pizza, muzzarella, barracas, food, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso producto, comprar, tienda">
     <title>BarracasFood tienda de comida listo para cocinar.</title>
 </head>
-
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,11 +54,9 @@
         <section class="tienda">
             <h1>Tienda</h1>
             <h2>Sorrentinos</h2>
-
         </section>
         <section class="sorrentinos">
             <div class="sorrentinos__sorrentino">
-
                 <div class="card" style="width: 18rem;">
                     <img src="../img/sorrenrojo.jpg" class="card-img-top" alt="sorrentino">
                     <div class="card-body">
@@ -93,7 +90,6 @@
                     </div>
                   </div>
             </div>
-
         </section>
         <section class="ravioles">
             <h2>Ravioles</h2>
@@ -115,7 +111,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/ravioles.jpg" class="card-img-top" alt="raviltienda">
+                    <img src="../img/ravioles.jpg" class="card-img-top" alt="ravioltienda">
                     <div class="card-body">
                       <h5 class="card-title">Ravioles</h5>
                       <p class="card-text">Rellenos de bondiola braseada . 12 unidades</p>
@@ -123,7 +119,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/capeletinis.jpg" class="card-img-top" alt="capeletinis">
+                    <img src="../img/capeletinis(2).jpg" class="card-img-top" alt="capeletinis">
                     <div class="card-body">
                       <h5 class="card-title">Capeletinis</h5>
                       <p class="card-text">Capeletinis rellenos de ternera y parmesano. 12 unidades</p>
@@ -158,7 +154,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="../img/ñoquicala.jpg" class="card-img-top" alt="ñoqui">
+                    <img src="../img/ñoquicala (1).jpg" class="card-img-top" alt="ñoqui">
                     <div class="card-body">
                       <h5 class="card-title">Ñoquis</h5>
                       <p class="card-text">Ñoquis de harina y calabaza. 500grs</p>
@@ -166,7 +162,6 @@
                     </div>
                   </div>
             </div>
-
         </section>
     </main>
     <footer>
@@ -195,9 +190,7 @@
                 width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
