--- a/pages/panes.html
+++ b/pages/panes.html
@@ -9,7 +9,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
-    <meta name="description" content="Barracas food: Panes y pizzas elaborados con masa madre de harina organica, ubicados en capital federal">
+    <meta name="description" content="Barracas food tienda de Panes y pizzas elaborados con masa madre de harina organica, ubicados en capital federal">
     <meta name="keywords" content=" pan, panes, pizza, muzzarella, barracas, food, comida, harina, organico, vegetariano, vegano, pasta, casero, sabroso">
     <title>BarracasFood Panes de masa madre con harinas organicas.</title>
 </head>
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" class="logo-nav" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
         <section class="panes-cards">
             <div class="panes-cards__contenedor">
                 <div class="card" style="width: 18rem;">
-                    <img src="../img/produpan.jpg" class="card-img-top" alt="producto">
+                    <img src="../img/integralprodu.jpg" class="card-img-top" alt="producto">
                     <div class="card-body">
                         <h5 class="card-title">Pan</h5>
                         <p class="card-text">Pan integral con semillas.</p>
